[gd_scene load_steps=3 format=3 uid="uid://w2wsx24s4ir4"]

[ext_resource type="Script" path="res://scenes/game/deck_master_select.gd" id="1_8jv4s"]
[ext_resource type="Texture2D" uid="uid://uxfhbtqju3c8" path="res://assets/game/cards/template.png" id="1_adjqn"]

[node name="DeckMasterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8jv4s")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 641.0
color = Color(0, 0, 0, 0.243137)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPanel" type="Panel" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.5

[node name="TopRow" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="DeckMasterSelectText" type="Label" parent="ColorRect/VBoxContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Select Your Deck Master"
horizontal_alignment = 1

[node name="MiddleRow" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
alignment = 1

[node name="CardDisplay" type="TextureRect" parent="ColorRect/VBoxContainer/MiddleRow"]
layout_mode = 2
texture = ExtResource("1_adjqn")
expand_mode = 3

[node name="CardInfoText" type="Label" parent="ColorRect/VBoxContainer/MiddleRow"]
layout_mode = 2
size_flags_horizontal = 8
text = "Card: ID: -1"

[node name="BottomRow" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 90
alignment = 1

[node name="Spacer2" type="Control" parent="ColorRect/VBoxContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="ScrollLeftButton" type="Button" parent="ColorRect/VBoxContainer/BottomRow"]
layout_mode = 2
size_flags_stretch_ratio = 0.5
theme_override_font_sizes/font_size = 90
text = "<<"

[node name="SelectButton" type="Button" parent="ColorRect/VBoxContainer/BottomRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Confirm
"

[node name="ScrollRightButton" type="Button" parent="ColorRect/VBoxContainer/BottomRow"]
layout_mode = 2
size_flags_stretch_ratio = 0.5
theme_override_font_sizes/font_size = 90
text = ">>"

[node name="Spacer" type="Control" parent="ColorRect/VBoxContainer/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="BottomPanel" type="Panel" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 0.5

[connection signal="pressed" from="ColorRect/VBoxContainer/BottomRow/ScrollLeftButton" to="." method="_on_left_button_clicked"]
[connection signal="pressed" from="ColorRect/VBoxContainer/BottomRow/SelectButton" to="." method="_on_confirm_button_clicked"]
[connection signal="pressed" from="ColorRect/VBoxContainer/BottomRow/ScrollRightButton" to="." method="_on_right_button_clicked"]
